# homework-1

./: CMakeLists.txt
Figures/: CMakeLists.txt
Figures/headers/: BrokenLine.h  BrokenLineClosed.h  CorrectPolygonalFigure.h  Point.h  PolygonalFigure.h  Trapeze.h  Triangle.h
Figures/sources/: BrokenLine.cpp  BrokenLineClosed.cpp  CorrectPolygonalFigure.cpp  Point.cpp  PolygonalFigure.cpp  Trapeze.cpp  Triangle.cpp
Tests/: CMakeLists.txt  lab1_tests.cpp
